--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==3.1.6
 django-celery-results==2.0.1
 django-rest-framework==0.1.0
 djangorestframework==3.12.2
+drf-yasg
 kombu==5.0.2
 librabbitmq==2.0.0
 prompt-toolkit==3.0.16
